<resources>
    <string name="app_name">Zhidao</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_news">No News Found</string>
    <string name="news_img">Image for the news</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Select News Topics</string>
    <string name="worldwide">Worldwide</string>
    <string name="us">U.S.</string>
    <string name="china">China</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="nba">NBA</string>
    <string name="nfl">NFL</string>
</resources>
